[gd_scene load_steps=3 format=3 uid="uid://214ce7ai1vg3"]

[ext_resource type="Script" uid="uid://bivcrv4c16j75" path="res://assets/scenes/areas/tamagotchi_global.gd" id="1_cxcdh"]
[ext_resource type="Script" uid="uid://dqjsx45dg5ypi" path="res://assets/scenes/areas/menu_manager.gd" id="2_cxcdh"]

[node name="Node_tamagotchi_global" type="Node"]
script = ExtResource("1_cxcdh")

[node name="Node2D_world" type="Node2D" parent="."]

[node name="Node_audioManager" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_cxcdh")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 430.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.791667
anchor_bottom = 0.515
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Button_feed" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
text = "Feed"

[node name="Button_freeze" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Freeze"

[node name="Button_Room_1" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Room 1"

[node name="Button_Room_2" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Room 2"

[node name="Button_Room_3" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Room 3
"

[node name="Button_Egg_Friend_1" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Tamagotchi 1"

[node name="Button_Egg_Friend_2" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Tamagotchi 2"

[node name="Button_Egg_Friend_3" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Tamagotchi 3"

[node name="Main_menu" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.791667
anchor_bottom = 0.515
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Button_resume" type="Button" parent="CanvasLayer/Control/Main_menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
text = "Resume"

[node name="Button_actions" type="Button" parent="CanvasLayer/Control/Main_menu"]
layout_mode = 2
text = "Actions"

[node name="Button_options" type="Button" parent="CanvasLayer/Control/Main_menu"]
layout_mode = 2
text = "Options"

[node name="Button_save" type="Button" parent="CanvasLayer/Control/Main_menu"]
layout_mode = 2
text = "Save"

[node name="Button_quit" type="Button" parent="CanvasLayer/Control/Main_menu"]
layout_mode = 2
text = "Quit"

[node name="Action_menu" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.791667
anchor_bottom = 0.515
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Button_back" type="Button" parent="CanvasLayer/Control/Action_menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
text = "Back"

[node name="Button_pet" type="Button" parent="CanvasLayer/Control/Action_menu"]
layout_mode = 2
text = "Pet"

[node name="Button_feed" type="Button" parent="CanvasLayer/Control/Action_menu"]
layout_mode = 2
text = "Feed"

[node name="Button_scold" type="Button" parent="CanvasLayer/Control/Action_menu"]
layout_mode = 2
text = "Scold"

[node name="Options_menu" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.791667
anchor_bottom = 0.515
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Button_back" type="Button" parent="CanvasLayer/Control/Options_menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
text = "Back"

[node name="Button_setBackground" type="Button" parent="CanvasLayer/Control/Options_menu"]
layout_mode = 2
text = "Background"

[node name="Button_setEggFriend" type="Button" parent="CanvasLayer/Control/Options_menu"]
layout_mode = 2
text = "Egg Friend"

[node name="Button_setTime" type="Button" parent="CanvasLayer/Control/Options_menu"]
layout_mode = 2
text = "Time"

[node name="Options_subBackgroundMenu" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.791667
anchor_bottom = 0.515
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Button_back" type="Button" parent="CanvasLayer/Control/Options_subBackgroundMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
text = "Back"

[node name="Button_setBackground_1" type="Button" parent="CanvasLayer/Control/Options_subBackgroundMenu"]
layout_mode = 2
text = "Field"

[node name="Button_setBackground_2" type="Button" parent="CanvasLayer/Control/Options_subBackgroundMenu"]
layout_mode = 2
text = "Bedroom"

[node name="Button_setBackground_3" type="Button" parent="CanvasLayer/Control/Options_subBackgroundMenu"]
layout_mode = 2
text = "Bakery"

[node name="Options_subEggFriendMenu" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.791667
anchor_bottom = 0.515
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Button_back" type="Button" parent="CanvasLayer/Control/Options_subEggFriendMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
text = "Back"

[node name="Button_setEggFriend_1" type="Button" parent="CanvasLayer/Control/Options_subEggFriendMenu"]
layout_mode = 2
text = "set cd"

[node name="Button_setEggFriend_2" type="Button" parent="CanvasLayer/Control/Options_subEggFriendMenu"]
layout_mode = 2
text = "set ???"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_feed" to="." method="_on_button_feed_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_feed" to="CanvasLayer" method="_on_button_feed_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_freeze" to="." method="_on_button_freeze_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_Room_1" to="." method="_on_button_room_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_Room_2" to="." method="_on_button_room_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_Room_3" to="." method="_on_button_room_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_Egg_Friend_1" to="." method="_on_button_egg_friend_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_Egg_Friend_2" to="." method="_on_button_egg_friend_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button_Egg_Friend_3" to="." method="_on_button_egg_friend_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Main_menu/Button_actions" to="CanvasLayer" method="_on_button_actions_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Main_menu/Button_options" to="CanvasLayer" method="_on_button_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Action_menu/Button_back" to="CanvasLayer" method="_on_button_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Action_menu/Button_pet" to="CanvasLayer" method="_on_button_pet_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_menu/Button_back" to="CanvasLayer" method="_on_button_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_menu/Button_setBackground" to="CanvasLayer" method="_on_button_set_background_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_menu/Button_setEggFriend" to="CanvasLayer" method="_on_button_set_egg_friend_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_subBackgroundMenu/Button_back" to="CanvasLayer" method="_on_button_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_subBackgroundMenu/Button_setBackground_1" to="CanvasLayer" method="_on_button_set_background_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_subBackgroundMenu/Button_setBackground_2" to="CanvasLayer" method="_on_button_set_background_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_subBackgroundMenu/Button_setBackground_3" to="CanvasLayer" method="_on_button_set_background_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_subEggFriendMenu/Button_back" to="CanvasLayer" method="_on_button_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options_subEggFriendMenu/Button_setEggFriend_1" to="CanvasLayer" method="_on_button_set_egg_friend_1_pressed"]
